--- a/package.json
+++ b/package.json
@@ -24,11 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "eject": "react-scripts eject"
   },
-  "homepage": "https://saevarom.github.io/splitta/build",
   "eslintConfig": {
     "extends": [
       "react-app",
